--- a/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
@@ -42,7 +42,7 @@
     <ClCompile Include="ArenaTests.cpp">
       <Filter>Tests\GameObjects</Filter>
     </ClCompile>
-    <ClCompile Include="PhysicsTests.cpp">
+    <ClCompile Include="PlayerPhysicsTests.cpp">
       <Filter>Tests\Utilities</Filter>
     </ClCompile>
   </ItemGroup>
@@ -101,7 +101,7 @@
     <ClInclude Include="mock_FrameRateProvider.h">
       <Filter>Mocks</Filter>
     </ClInclude>
-    <ClInclude Include="mock_Physics.h">
+    <ClInclude Include="mock_PlayerPhysics.h">
       <Filter>Mocks</Filter>
     </ClInclude>
   </ItemGroup>
