--- a/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
@@ -104,6 +104,9 @@
     <ClInclude Include="mock_PlayerPhysics.h">
       <Filter>Mocks</Filter>
     </ClInclude>
+    <ClInclude Include="mock_ArenaPhysics.h">
+      <Filter>Mocks</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Mocks">
