Generate a cooler map

--- a/MegaManLofi/MegaManLofi.vcxproj
+++ b/MegaManLofi/MegaManLofi.vcxproj
@@ -150,6 +150,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Arena.cpp" />
+    <ClCompile Include="ArenaConsoleSpriteGenerator.cpp" />
+    <ClCompile Include="ArenaTileGenerator.cpp" />
     <ClCompile Include="ArenaPhysics.cpp" />
     <ClCompile Include="ConsoleBuffer.cpp" />
     <ClCompile Include="FrameActionRegistry.cpp" />
@@ -178,6 +180,9 @@
   <ItemGroup>
     <ClInclude Include="Arena.h" />
     <ClInclude Include="ArenaConfig.h" />
+    <ClInclude Include="ArenaConsoleSpriteGenerator.h" />
+    <ClInclude Include="ArenaGenerationDefs.h" />
+    <ClInclude Include="ArenaTileGenerator.h" />
     <ClInclude Include="ArenaPhysics.h" />
     <ClInclude Include="ArenaTile.h" />
     <ClInclude Include="ConsoleColor.h" />
