Renamed Startup state to Title

--- a/MegaManLofi/MegaManLofi.vcxproj
+++ b/MegaManLofi/MegaManLofi.vcxproj
@@ -176,8 +176,8 @@
     <ClCompile Include="RandomWrapper.cpp" />
     <ClCompile Include="RectangleUtilities.cpp" />
     <ClCompile Include="SleeperWrapper.cpp" />
-    <ClCompile Include="StartupStateConsoleRenderer.cpp" />
-    <ClCompile Include="StartupStateInputHandler.cpp" />
+    <ClCompile Include="TitleStateConsoleRenderer.cpp" />
+    <ClCompile Include="TitleStateInputHandler.cpp" />
     <ClCompile Include="ThreadWrapper.cpp" />
     <ClCompile Include="TitleSpriteGenerator.cpp" />
   </ItemGroup>
@@ -257,8 +257,8 @@
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="RectangleUtilities.h" />
     <ClInclude Include="SleeperWrapper.h" />
-    <ClInclude Include="StartupStateInputHandler.h" />
-    <ClInclude Include="StartupStateConsoleRenderer.h" />
+    <ClInclude Include="TitleStateInputHandler.h" />
+    <ClInclude Include="TitleStateConsoleRenderer.h" />
     <ClInclude Include="ThreadWrapper.h" />
     <ClInclude Include="Quad.h" />
     <ClInclude Include="TitleSpriteGenerator.h" />
