Added ConsoleSprite class
This is an actual sprite, not an image like it used to be. It can have several frames and a timer between them.

--- a/MegaManLofiTests/MegaManLofiTests.vcxproj
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <ClCompile Include="ArenaPhysicsTests.cpp" />
     <ClCompile Include="ArenaTests.cpp" />
+    <ClCompile Include="ConsoleSpriteTests.cpp" />
     <ClCompile Include="FrameActionRegistryTests.cpp" />
     <ClCompile Include="GameClockTests.cpp" />
     <ClCompile Include="GameOverStateInputHandlerTests.cpp" />
