Added IConsoleAnimation interface

--- a/MegaManLofi/MegaManLofi.vcxproj.filters
+++ b/MegaManLofi/MegaManLofi.vcxproj.filters
@@ -404,5 +404,8 @@
     <ClInclude Include="ConsoleSprite.h">
       <Filter>Header Files\Render</Filter>
     </ClInclude>
+    <ClInclude Include="IConsoleAnimation.h">
+      <Filter>Header Files\Interfaces</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
