--- a/MegaManLofiTests/MegaManLofiTests.vcxproj
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <ClInclude Include="mock_Arena.h" />
     <ClInclude Include="mock_ArenaPhysics.h" />
+    <ClInclude Include="mock_ConsoleAnimation.h" />
     <ClInclude Include="mock_FrameActionRegistry.h" />
     <ClInclude Include="mock_FrameRateProvider.h" />
     <ClInclude Include="mock_Game.h" />
