--- a/MegaManLofi/MegaManLofi.vcxproj
+++ b/MegaManLofi/MegaManLofi.vcxproj
@@ -216,6 +216,7 @@
     <ClInclude Include="IArena.h" />
     <ClInclude Include="IArenaInfoProvider.h" />
     <ClInclude Include="IArenaPhysics.h" />
+    <ClInclude Include="IConsoleAnimation.h" />
     <ClInclude Include="IFrameActionRegistry.h" />
     <ClInclude Include="IFrameRateProvider.h" />
     <ClInclude Include="IGame.h" />
