--- a/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClInclude Include="mock_ConsoleSprite.h">
       <Filter>Mocks</Filter>
     </ClInclude>
+    <ClInclude Include="mock_ConsoleAnimationProvider.h">
+      <Filter>Mocks</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Mocks">
