--- a/MegaManLofi/MegaManLofi.vcxproj.filters
+++ b/MegaManLofi/MegaManLofi.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="PlayerThwipInConsoleAnimation.cpp">
       <Filter>Source Files\Render\Animations</Filter>
     </ClCompile>
+    <ClCompile Include="StageStartedConsoleAnimation.cpp">
+      <Filter>Source Files\Render\Animations</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameRunner.h">
@@ -438,6 +441,9 @@
       <Filter>Header Files\Render\Animations</Filter>
     </ClInclude>
     <ClInclude Include="PlayerThwipInConsoleAnimation.h">
+      <Filter>Header Files\Render\Animations</Filter>
+    </ClInclude>
+    <ClInclude Include="StageStartedConsoleAnimation.h">
       <Filter>Header Files\Render\Animations</Filter>
     </ClInclude>
   </ItemGroup>
