--- a/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="PlayerThwipInConsoleAnimationTests.cpp">
       <Filter>Tests\Render\Animations</Filter>
     </ClCompile>
+    <ClCompile Include="StageStartedConsoleAnimationTests.cpp">
+      <Filter>Tests\Render\Animations</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mock_GameEventAggregator.h">
