--- a/MegaManLofiTests/MegaManLofiTests.vcxproj
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj
@@ -79,6 +79,7 @@
     <ClCompile Include="PlayerTests.cpp" />
     <ClCompile Include="PlayerThwipInConsoleAnimationTests.cpp" />
     <ClCompile Include="PlayerThwipOutConsoleAnimationTests.cpp" />
+    <ClCompile Include="PlayingMenuStateInputHandlerTests.cpp" />
     <ClCompile Include="PlayingStateInputHandlerTests.cpp" />
     <ClCompile Include="RectangleUtilitiesTests.cpp" />
     <ClCompile Include="StageStartedConsoleAnimationTests.cpp" />
