--- a/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="PlayerExplodedConsoleAnimationTests.cpp">
       <Filter>Tests\Render\Animations</Filter>
     </ClCompile>
+    <ClCompile Include="PlayingMenuStateInputHandlerTests.cpp">
+      <Filter>Tests\Input</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mock_GameEventAggregator.h">
