--- a/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
@@ -146,6 +146,9 @@
     <ClInclude Include="mock_Menu.h">
       <Filter>Mocks</Filter>
     </ClInclude>
+    <ClInclude Include="mock_MenuProvider.h">
+      <Filter>Mocks</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Mocks">
