--- a/MegaManLofiTests/MegaManLofiTests.vcxproj
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj
@@ -61,7 +61,7 @@
     <ClInclude Include="mock_PlayerInfoProvider.h" />
     <ClInclude Include="mock_PlayerPhysics.h" />
     <ClInclude Include="mock_Player.h" />
-    <ClInclude Include="mock_ProjectileFactory.h" />
+    <ClInclude Include="mock_EntityFactory.h" />
     <ClInclude Include="mock_ScreenBuffer.h" />
     <ClInclude Include="mock_Sleeper.h" />
     <ClInclude Include="mock_Thread.h" />
@@ -72,6 +72,7 @@
     <ClCompile Include="BasicEntityTests.cpp" />
     <ClCompile Include="ConsoleAnimationRepositoryTests.cpp" />
     <ClCompile Include="ConsoleSpriteTests.cpp" />
+    <ClCompile Include="EntityFactoryTests.cpp" />
     <ClCompile Include="FrameActionRegistryTests.cpp" />
     <ClCompile Include="GameClockTests.cpp" />
     <ClCompile Include="GameOverStateInputHandlerTests.cpp" />
