--- a/MegaManLofi/MegaManLofi.vcxproj
+++ b/MegaManLofi/MegaManLofi.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="ConsoleRenderDefsGenerator.cpp" />
     <ClCompile Include="ConsoleSprite.cpp" />
     <ClCompile Include="EntityDefsGenerator.cpp" />
+    <ClCompile Include="EntityFactory.cpp" />
     <ClCompile Include="FrameActionRegistry.cpp" />
     <ClCompile Include="GameDefsGenerator.cpp" />
     <ClCompile Include="GameOverStateConsoleRenderer.cpp" />
@@ -222,6 +223,7 @@
     <ClInclude Include="Direction.h" />
     <ClInclude Include="EntityDefs.h" />
     <ClInclude Include="EntityDefsGenerator.h" />
+    <ClInclude Include="EntityFactory.h" />
     <ClInclude Include="FrameAction.h" />
     <ClInclude Include="FrameActionRegistry.h" />
     <ClInclude Include="Game.h" />
@@ -257,7 +259,7 @@
     <ClInclude Include="IPlayerPhysics.h" />
     <ClInclude Include="IPlayer.h" />
     <ClInclude Include="IPlayerInfoProvider.h" />
-    <ClInclude Include="IProjectileFactory.h" />
+    <ClInclude Include="IEntityFactory.h" />
     <ClInclude Include="IRandom.h" />
     <ClInclude Include="IReadOnlyArena.h" />
     <ClInclude Include="IReadOnlyPlayer.h" />
