--- a/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="BasicEntityTests.cpp">
       <Filter>Tests\GameObjects</Filter>
     </ClCompile>
+    <ClCompile Include="EntityFactoryTests.cpp">
+      <Filter>Tests\GameObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mock_GameEventAggregator.h">
@@ -167,7 +170,7 @@
     <ClInclude Include="mock_ArenaInfoProvider.h">
       <Filter>Mocks</Filter>
     </ClInclude>
-    <ClInclude Include="mock_ProjectileFactory.h">
+    <ClInclude Include="mock_EntityFactory.h">
       <Filter>Mocks</Filter>
     </ClInclude>
   </ItemGroup>
