--- a/MegaManLofi/MegaManLofi.vcxproj
+++ b/MegaManLofi/MegaManLofi.vcxproj
@@ -263,6 +263,7 @@
     <ClInclude Include="IEntityFactory.h" />
     <ClInclude Include="IRandom.h" />
     <ClInclude Include="IReadOnlyArena.h" />
+    <ClInclude Include="IReadOnlyEntity.h" />
     <ClInclude Include="IReadOnlyPlayer.h" />
     <ClInclude Include="IScreenBuffer.h" />
     <ClInclude Include="IThread.h" />
